--- a/strings/command.yml
+++ b/strings/command.yml
@@ -93,7 +93,7 @@ UNBLOCK_COMMAND : ["unblock"]
 BLOCKED_COMMAND : ["blockedusers"]
 
 #sPEEDTEST
-SPEEDTEST_COMMAND : ["speedtest"]
+SPEEDTEST_COMMAND : ["speedtest" , "spt"]
 
 #Voice chat commands
 ACTIVEVC_COMMAND : ["activevoice" , "activevc"]
